@@ -5,7 +5,8 @@
 
 \description{
   List to data frame. Reduce/simplify a list of homogenous objects to a
-  data frame
+  data frame. All \code{NULL} entries are removed. Remaining entries
+  must be all atomic or all data frames.
 }
 \keyword{internal}
 \arguments{
